# WB-Analyzer

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
apps/: main.py  settings.py
apps/api/: __init__.py
apps/api/v1/: __init__.py  wildberries_parser.py
apps/api/v1/cruds/: product_crud.py  server_crud.py
apps/api/v1/handlers/: product_handler.py  product_heandler.py
apps/api/v1/models/: __init__.py  product_model.py
apps/api/v1/schemas/: product_schema.py
apps/db/: enabled_migration_schemas.py  session.py
migrations/: env.py
tests/: conftest.py
tests/api/crud/: test_base_crud.py
tests/api/handlers/: test_product_handler.py  test_product_handler.py.py
tests/db/: test_base_db_class.py
tests/sql_init_data/: base_data_tree.py
tests/sql_init_data/low_level_data_init/nginx_parser/: log_entry_model_init.py
